priority-notes-api/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priority-notes-deployment
  namespace: lab5
  labels:
    app: priority-notes
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: priority-notes
  template:
    metadata:
      labels:
        app: priority-notes
        version: v1
    spec:
      containers:
        - name: priority-notes-api
          image: priority-notes-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: sqlite-data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: sqlite-data
          persistentVolumeClaim:
            claimName: priority-notes-sqlite-pvc
