priority-notes-api/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: priority-notes-service
  namespace: lab5
  labels:
    app: priority-notes
spec:
  type: NodePort
  selector:
    app: priority-notes
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
